--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/dungeon-master-copilot-server.csproj
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/dungeon-master-copilot-server.csproj
@@ -15,6 +15,12 @@
     <PackageReference Include="Microsoft.Identity.Web" Version="1.25.3" />
     <PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="1.25.3" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.25.3" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="0.15.230531.5-preview" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
