Added Semantic Kernel Config

--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.Development.json
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.Development.json
@@ -1,9 +1,31 @@
 {
-  "DetailedErrors": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "DetailedErrors": true,
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "SemanticKernel": {
+        "Services": [
+            {
+                "Id": "TextCompletion",
+                "Type": "AzureOpenAIServiceTextCompletion",
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "Deployment": "text-davinci-003"
+            },
+            {
+                "Id": "ChatCompletion",
+                "Type": "AzureOpenAIServiceChatCompletion",
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "Deployment": "gpt-35-turbo"
+            },
+            {
+                "Id": "Embeddings",
+                "Type": "AzureOpenAIServiceEmbedding",
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "Deployment": "text-embedding-ada-002"
+            }
+        ]
     }
-  }
 }
