Added Skills to Semantic Kernel

--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.json
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.json
@@ -18,6 +18,7 @@
     "Scopes": "user.read"
   },
   "SemanticKernel": {
+    "SkillDirectory": "Skills",
     "Services": [
       {
         "Id": "TextCompletion",
