--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.Development.json
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.Development.json
@@ -7,6 +7,7 @@
         }
     },
     "SemanticKernel": {
+        "SkillDirectory": "Skills",
         "Services": [
             {
                 "Id": "TextCompletion",
