--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,11 @@
   
     // Features to add to the dev container. More info: https://containers.dev/features.
     "features": {
-      "ghcr.io/devcontainers/features/docker-in-docker:1": {}
+      "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+      "ghcr.io/devcontainers/features/azure-cli:1": {},
+      "ghcr.io/devcontainers/features/dotnet:1": {},
+      "ghcr.io/devcontainers/features/powershell:1": {}
+      
     },
   
     // Configure tool-specific properties.
@@ -16,9 +20,15 @@
       "vscode": {
         "settings": {},
         "extensions": [
-          "ms-dotnettools.csharp",
-          "ms-azuretools.vscode-docker"
-        ]
+			"ms-dotnettools.csharp",
+			"ms-azuretools.vscode-docker",
+			"GitHub.copilot-nightly",
+			"GitHub.copilot-chat",
+			"ms-dotnettools.csdevkit",
+			"ms-azuretools.vscode-bicep",
+			"ms-vscode.azure-account",
+			"ms-vscode.azurecli"
+		]
       }
     }
   }
