--- a/.github/workflows/build-dmcserver.yml
+++ b/.github/workflows/build-dmcserver.yml
@@ -16,6 +16,11 @@ jobs:
         with:
           dotnet-version: 7
 
+      - name: Test DMC server
+        run: |
+          dotnet test --configuration Release
+        working-directory: ./src/dungeon-master-copilot/dungeon-master-copilot-server/
+
       - name: Build publishable DMC server
         run: |
           dotnet publish --configuration Release
