Update Bicep Linting to download latest Bicep

--- a/.github/workflows/lint-bicep.yml
+++ b/.github/workflows/lint-bicep.yml
@@ -10,6 +10,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Lint code
+    - name: Install Bicep
+      run: | 
+        curl -Lo bicepinstall https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64
+        chmod +x ./bicepinstall
+        sudo mv ./bicepinstall /usr/local/bin/bicep
+        bicep --help
+     
+    - name: Lint Bicep
       run: |
-        az bicep build --file ./infrastructure/bicep/main.bicep
+        bicep build ./infrastructure/bicep/main.bicep
