--- a/.github/workflows/validate-infrastructure.yml
+++ b/.github/workflows/validate-infrastructure.yml
@@ -28,8 +28,8 @@ jobs:
     name: Validate Infrastructure Deployment
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
 
       - name: Azure Login
         uses: azure/login@v1
@@ -44,7 +44,7 @@ jobs:
           failOnStdErr: false
           resourceGroupName: ${{ inputs.RESOURCE_GROUP_NAME }}
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          template: ./infrastructure/bicep/main.bicep
+          template: ./armtemplate/main.json
           region: ${{ inputs.LOCATION }}
           scope: subscription
           parameters: >
