--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.Development.json
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.Development.json
@@ -6,6 +6,7 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "cosmosDbEndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
     "SemanticKernel": {
         "SkillDirectory": "Skills",
         "Services": [
