--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.Development.json
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.Development.json
@@ -8,7 +8,7 @@
     },
     "cosmosDbEndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
     "SemanticKernel": {
-        "SkillDirectory": "Skills",
+        "PluginsDirectory": "Plugins",
         "Services": [
             {
                 "Id": "TextCompletion",
