--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.json
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.json
@@ -19,7 +19,7 @@
     },
     "cosmosDbEndpointUri": "",
     "SemanticKernel": {
-        "PluginsDirectory": "Plugins",
+        "PluginsDirectory": ".\\Plugins",
         "Services": [
             {
                 "Id": "TextCompletion",
