Added AI support for local debugging

--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/dungeon-master-copilot-server.csproj
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/dungeon-master-copilot-server.csproj
@@ -8,9 +8,11 @@
     <WebProject_DirectoryAccessLevelKey>0</WebProject_DirectoryAccessLevelKey>
     <RootNamespace>dungeon_master_copilot_server</RootNamespace>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <ApplicationInsightsResourceId>/subscriptions/3c66f679-de54-4230-8268-214e2bb356d7/resourceGroups/dsr-dmcopilot-rg/providers/microsoft.insights/components/dsr-dmcopilot-ai</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.7" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.7" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.0" />
