--- a/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.json
+++ b/src/dungeon-master-copilot/dungeon-master-copilot-server/appsettings.json
@@ -1,44 +1,47 @@
 {
-    "AzureAd": {
-        "Instance": "https://login.microsoftonline.com/",
-        "Domain": "fdpo.onmicrosoft.com",
-        "TenantId": "16b3c013-d300-468d-ac64-7eda0820b6d3",
-        "ClientId": "88c4e1bc-cb4c-49ec-8631-8281c87ee29e",
-        "CallbackPath": "/signin-oidc"
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "MicrosoftGraph": {
-        "BaseUrl": "https://graph.microsoft.com/v1.0",
-        "Scopes": "user.read"
-    },
-    "cosmosDbEndpointUri": "",
-    "SemanticKernel": {
-        "PluginsDirectory": ".\\Plugins",
-        "Services": [
-            {
-                "Id": "TextCompletion",
-                "Type": "AzureOpenAIServiceTextCompletion",
-                "Endpoint": "",
-                "Deployment": ""
-            },
-            {
-                "Id": "ChatCompletion",
-                "Type": "AzureOpenAIServiceChatCompletion",
-                "Endpoint": "",
-                "Deployment": ""
-            },
-            {
-                "Id": "Embeddings",
-                "Type": "AzureOpenAIServiceEmbedding",
-                "Endpoint": "",
-                "Deployment": ""
-            }
-        ]
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "fdpo.onmicrosoft.com",
+    "TenantId": "16b3c013-d300-468d-ac64-7eda0820b6d3",
+    "ClientId": "88c4e1bc-cb4c-49ec-8631-8281c87ee29e",
+    "CallbackPath": "/signin-oidc"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "MicrosoftGraph": {
+    "BaseUrl": "https://graph.microsoft.com/v1.0",
+    "Scopes": "user.read"
+  },
+  "cosmosDbEndpointUri": "",
+  "SemanticKernel": {
+    "PluginsDirectory": ".\\Plugins",
+    "Services": [
+      {
+        "Id": "TextCompletion",
+        "Type": "AzureOpenAIServiceTextCompletion",
+        "Endpoint": "",
+        "Deployment": ""
+      },
+      {
+        "Id": "ChatCompletion",
+        "Type": "AzureOpenAIServiceChatCompletion",
+        "Endpoint": "",
+        "Deployment": ""
+      },
+      {
+        "Id": "Embeddings",
+        "Type": "AzureOpenAIServiceEmbedding",
+        "Endpoint": "",
+        "Deployment": ""
+      }
+    ]
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=b30c5471-8703-46bf-bbbc-6dcb6fe003eb;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/"
+  }
 }
