--- a/src/DMCopilot/DMCopilot.Backend.Test/DMCopilot.Backend.Test.csproj
+++ b/src/DMCopilot/DMCopilot.Backend.Test/DMCopilot.Backend.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>dmcopilot.Test</RootNamespace>
+    <RootNamespace>DMCopilot.Backend.Test</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
