Fix up ComsosDB connectivity

--- a/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
@@ -6,7 +6,10 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "cosmosDbEndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
+    "CosmosDb": {
+        "EndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
+        "DatabaseName": "dmcopilot"
+    },
     "SemanticKernel": {
         "PluginsDirectory": "Plugins",
         "Services": [
