--- a/src/DMCopilot/DMCopilot.Backend/appsettings.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.json
@@ -17,7 +17,10 @@
         "BaseUrl": "https://graph.microsoft.com/v1.0",
         "Scopes": "user.read"
     },
-    "cosmosDbEndpointUri": "",
+    "CosmosDb": {
+        "EndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
+        "DatabaseName": "dmcopilot"
+    },
     "SemanticKernel": {
         "PluginsDirectory": "Plugins",
         "Services": [
