--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dotnet.defaultSolution": "src/dungeon-master-copilot/dungeon-master-copilot.sln"
+    "dotnet.defaultSolution": "src/DMCopilot/DMCopilot.sln"
 }
