Fix connection string

--- a/src/DMCopilot/DMCopilot.Backend/appsettings.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.json
@@ -17,6 +17,7 @@
         "BaseUrl": "https://graph.microsoft.com/v1.0",
         "Scopes": "user.read"
     },
+    "ConnectionStrings": {},
     "CosmosDb": {
         "EndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
         "DatabaseName": "dmcopilot"
