Rework SK config and World page

--- a/src/DMCopilot/DMCopilot.Backend/DMCopilot.Backend.csproj
+++ b/src/DMCopilot/DMCopilot.Backend/DMCopilot.Backend.csproj
@@ -32,6 +32,9 @@
     <None Update="Plugins\Character\CreateCharacter\skprompt.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Plugins\World\CreateWorld\skprompt.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
