--- a/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
@@ -12,25 +12,31 @@
     },
     "SemanticKernel": {
         "PluginsDirectory": "Plugins",
-        "Services": [
+        "AzureOpenAiTextCompletionServices": [
             {
                 "Id": "TextCompletion",
-                "Type": "AzureOpenAIServiceTextCompletion",
                 "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-                "Deployment": "text-davinci-003"
-            },
+                "Deployment": "text-davinci-003",
+                "SetAsDefault": true
+            }
+        ],
+        "AzureOpenAiChatCompletionServices": [
             {
                 "Id": "ChatCompletion",
-                "Type": "AzureOpenAIServiceChatCompletion",
                 "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-                "Deployment": "gpt-35-turbo"
-            },
+                "Deployment": "gpt-35-turbo",
+                "SetAsDefault": true,
+                "AlsoAsTextCompletion": true
+            }
+        ],
+        "AzureOpenAiTextEmbeddingGenerationServices": [
             {
                 "Id": "Embeddings",
-                "Type": "AzureOpenAIServiceEmbedding",
                 "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-                "Deployment": "text-embedding-ada-002"
+                "Deployment": "text-embedding-ada-002",
+                "SetAsDefault": true
             }
         ]
     }
+
 }
