--- a/src/DMCopilot/DMCopilot.Backend/appsettings.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.json
@@ -24,24 +24,29 @@
     },
     "SemanticKernel": {
         "PluginsDirectory": "Plugins",
-        "Services": [
+        "AzureOpenAiTextCompletionServices": [
             {
                 "Id": "TextCompletion",
-                "Type": "AzureOpenAIServiceTextCompletion",
-                "Endpoint": "",
-                "Deployment": ""
-            },
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "Deployment": "text-davinci-003",
+                "SetAsDefault": true
+            }
+        ],
+        "AzureOpenAiChatCompletionServices": [
             {
                 "Id": "ChatCompletion",
-                "Type": "AzureOpenAIServiceChatCompletion",
-                "Endpoint": "",
-                "Deployment": ""
-            },
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "Deployment": "gpt-35-turbo",
+                "SetAsDefault": true,
+                "AlsoAsTextCompletion": true
+            }
+        ],
+        "AzureOpenAiTextEmbeddingGenerationServices": [
             {
                 "Id": "Embeddings",
-                "Type": "AzureOpenAIServiceEmbedding",
-                "Endpoint": "",
-                "Deployment": ""
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "Deployment": "text-embedding-ada-002",
+                "SetAsDefault": true
             }
         ]
     },
