--- a/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
@@ -12,19 +12,18 @@
     },
     "SemanticKernel": {
         "PluginsDirectory": "Plugins",
-        "AzureOpenAiTextCompletionServices": [
-            {
-                "Id": "TextCompletion",
-                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-                "Deployment": "text-davinci-003",
-                "SetAsDefault": true
-            }
-        ],
         "AzureOpenAiChatCompletionServices": [
             {
                 "Id": "ChatCompletion",
                 "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
                 "Deployment": "gpt-35-turbo",
+                "SetAsDefault": true,
+                "AlsoAsTextCompletion": true
+            },
+            {
+                "Id": "ChatCompletion",
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "Deployment": "gpt-35-turbo-16k",
                 "SetAsDefault": true,
                 "AlsoAsTextCompletion": true
             }
@@ -37,6 +36,8 @@
                 "SetAsDefault": true
             }
         ]
+    },
+    "ApplicationInsights": {
+        "ConnectionString": "InstrumentationKey=b30c5471-8703-46bf-bbbc-6dcb6fe003eb;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/"
     }
-
 }
