--- a/src/DMCopilot/DMCopilot.Backend/appsettings.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.json
@@ -24,19 +24,18 @@
     },
     "SemanticKernel": {
         "PluginsDirectory": "Plugins",
-        "AzureOpenAiTextCompletionServices": [
-            {
-                "Id": "TextCompletion",
-                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-                "Deployment": "text-davinci-003",
-                "SetAsDefault": true
-            }
-        ],
         "AzureOpenAiChatCompletionServices": [
             {
                 "Id": "ChatCompletion",
                 "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
                 "Deployment": "gpt-35-turbo",
+                "SetAsDefault": true,
+                "AlsoAsTextCompletion": true
+            },
+            {
+                "Id": "ChatCompletion",
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "Deployment": "gpt-35-turbo-16k",
                 "SetAsDefault": true,
                 "AlsoAsTextCompletion": true
             }
@@ -49,8 +48,5 @@
                 "SetAsDefault": true
             }
         ]
-    },
-    "ApplicationInsights": {
-        "ConnectionString": "InstrumentationKey=b30c5471-8703-46bf-bbbc-6dcb6fe003eb;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/"
     }
 }
