--- a/.github/workflows/test-dmcopilotbackend.yml
+++ b/.github/workflows/test-dmcopilotbackend.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build-dmcopilotbackend:
-    name: Test DMC backend
+    name: Test DMCopilot.Shared
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -16,20 +16,20 @@ jobs:
         with:
           dotnet-version: 7
 
-      - name: Run unit tests on DMC backend
+      - name: Run unit tests on DMCopilot.Shared
         run: |
           dotnet test --configuration Release --logger trx
-        working-directory: ./src/DMCopilot/DMCopilot.Backend.Test/
+        working-directory: ./src/DMCopilot/DMCopilot.Shared.Test/
 
       - name: Upload test results
         uses: actions/upload-artifact@v2
         with:
-          name: DMCopilot.Backend.Test
-          path: ./src/DMCopilot/DMCopilot.Backend.Test/TestResults/*.trx
+          name: DMCopilot.Shared.Test
+          path: ./src/DMCopilot/DMCopilot.Shared.Test/TestResults/*.trx
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
             files: |
-              ./src/DMCopilot/DMCopilot.Backend.Test/TestResults/*.trx
+              ./src/DMCopilot/DMCopilot.Shared.Test/TestResults/*.trx
