--- a/src/DMCopilot/DMCopilot.Backend/Plugins/World/CreateWorld/config.json
+++ b/src/DMCopilot/DMCopilot.Backend/Plugins/World/CreateWorld/config.json
@@ -1,13 +1,13 @@
 {
     "schema": 1,
-    "description": "Generate a world for Dugneons and Dragons 5th edition based on provide world information",
+    "description": "Generate a world for Dungeons and Dragons 5th edition based on provide world information",
     "type": "completion",
     "completion": {
-        "max_tokens": 2000,
+        "max_tokens": 16000,
         "temperature": 0.75,
-        "top_p": 0.0,
-        "presence_penalty": 0.0,
-        "frequency_penalty": 0.0
+        "top_p": 0,
+        "presence_penalty": 0,
+        "frequency_penalty": 0
     },
     "input": {
         "parameters": [
