Added AOAI key support and Image Generation

--- a/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
@@ -16,13 +16,6 @@
             {
                 "Id": "ChatCompletion",
                 "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-                "Deployment": "gpt-35-turbo",
-                "SetAsDefault": true,
-                "AlsoAsTextCompletion": true
-            },
-            {
-                "Id": "ChatCompletion",
-                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
                 "Deployment": "gpt-35-turbo-16k",
                 "SetAsDefault": true,
                 "AlsoAsTextCompletion": true
@@ -33,6 +26,13 @@
                 "Id": "Embeddings",
                 "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
                 "Deployment": "text-embedding-ada-002",
+                "SetAsDefault": true
+            }
+        ],
+        "AzureOpenAiImageServices": [
+            {
+                "Id": "ImageGeneration",
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
                 "SetAsDefault": true
             }
         ]
