--- a/src/DMCopilot/DMCopilot.Backend/appsettings.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.json
@@ -28,13 +28,6 @@
             {
                 "Id": "ChatCompletion",
                 "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-                "Deployment": "gpt-35-turbo",
-                "SetAsDefault": true,
-                "AlsoAsTextCompletion": true
-            },
-            {
-                "Id": "ChatCompletion",
-                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
                 "Deployment": "gpt-35-turbo-16k",
                 "SetAsDefault": true,
                 "AlsoAsTextCompletion": true
@@ -45,6 +38,13 @@
                 "Id": "Embeddings",
                 "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
                 "Deployment": "text-embedding-ada-002",
+                "SetAsDefault": true
+            }
+        ],
+        "AzureOpenAiImageServices": [
+            {
+                "Id": "ImageGeneration",
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
                 "SetAsDefault": true
             }
         ]
