Fix up SK processing

--- a/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
@@ -16,7 +16,7 @@
             {
                 "Id": "ChatCompletion",
                 "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-                "Deployment": "gpt-35-turbo-16k",
+                "Deployment": "gpt-35-turbo",
                 "SetAsDefault": true,
                 "AlsoAsTextCompletion": true
             }
