--- a/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
@@ -36,5 +36,8 @@
                 "SetAsDefault": true
             }
         ]
+    },
+    "Endpoints": {
+        "AppConfig": "https://dsr-dmcopilot-appconfig.azconfig.io"
     }
 }
