Configure server app to use Azure App Configuration

--- a/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.Development.json
@@ -37,7 +37,7 @@
             }
         ]
     },
-    "Endpoints": {
-        "AppConfig": "https://dsr-dmcopilot-appconfig.azconfig.io"
+    "AppConfiguration": {
+        "Endpoint": "https://dsr-dmcopilot-appconfig.azconfig.io"
     }
 }
