--- a/src/DMCopilot/DMCopilot.Backend/appsettings.json
+++ b/src/DMCopilot/DMCopilot.Backend/appsettings.json
@@ -1,55 +1,55 @@
 {
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "fdpo.onmicrosoft.com",
-    "TenantId": "16b3c013-d300-468d-ac64-7eda0820b6d3",
-    "ClientId": "88c4e1bc-cb4c-49ec-8631-8281c87ee29e",
-    "CallbackPath": "/signin-oidc"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "AzureAd": {
+        "Instance": "https://login.microsoftonline.com/",
+        "Domain": "fdpo.onmicrosoft.com",
+        "TenantId": "16b3c013-d300-468d-ac64-7eda0820b6d3",
+        "ClientId": "88c4e1bc-cb4c-49ec-8631-8281c87ee29e",
+        "CallbackPath": "/signin-oidc"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "MicrosoftGraph": {
+        "BaseUrl": "https://graph.microsoft.com/v1.0",
+        "Scopes": "user.read"
+    },
+    "ConnectionStrings": {},
+    "CosmosDb": {
+        "EndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
+        "DatabaseName": "dmcopilot"
+    },
+    "SemanticKernel": {
+        "PluginsDirectory": "Plugins",
+        "AzureOpenAiChatCompletionServices": [
+            {
+                "Id": "ChatCompletion",
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "Deployment": "gpt-35-turbo",
+                "SetAsDefault": true,
+                "AlsoAsTextCompletion": true
+            }
+        ],
+        "AzureOpenAiTextEmbeddingGenerationServices": [
+            {
+                "Id": "Embeddings",
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "Deployment": "text-embedding-ada-002",
+                "SetAsDefault": true
+            }
+        ],
+        "AzureOpenAiImageServices": [
+            {
+                "Id": "ImageGeneration",
+                "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
+                "SetAsDefault": true
+            }
+        ]
+    },
+    "AppConfiguration": {
+        "Endpoint": "https://dsr-dmcopilot-appconfig.azconfig.io"
     }
-  },
-  "AllowedHosts": "*",
-  "MicrosoftGraph": {
-    "BaseUrl": "https://graph.microsoft.com/v1.0",
-    "Scopes": "user.read"
-  },
-  "ConnectionStrings": {},
-  "CosmosDb": {
-    "EndpointUri": "https://dsr-dmcopilot-cdb.documents.azure.com:443/",
-    "DatabaseName": "dmcopilot"
-  },
-  "SemanticKernel": {
-    "PluginsDirectory": "Plugins",
-    "AzureOpenAiChatCompletionServices": [
-      {
-        "Id": "ChatCompletion",
-        "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-        "Deployment": "gpt-35-turbo",
-        "SetAsDefault": true,
-        "AlsoAsTextCompletion": true
-      }
-    ],
-    "AzureOpenAiTextEmbeddingGenerationServices": [
-      {
-        "Id": "Embeddings",
-        "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-        "Deployment": "text-embedding-ada-002",
-        "SetAsDefault": true
-      }
-    ],
-    "AzureOpenAiImageServices": [
-      {
-        "Id": "ImageGeneration",
-        "Endpoint": "https://dsr-dmcopilot-oai.openai.azure.com/",
-        "SetAsDefault": true
-      }
-    ]
-  },
-  "Endpoints": {
-    "AppConfig": "https://dsr-dmcopilot-appconfig.azconfig.io"
-  }
 }
